--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   padding: 30px 4% 10px;
   background-color: #fff;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@ header {
 body {
   font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ,
     Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #e6e6e6;
+  background-color: coral;
 }
 
 h1 {
@@ -38,4 +38,17 @@ li {
 
 nav {
   margin: 0 0 0 auto;
+}
+
+.GamePreview {
+  width: 100%;
+  height: 50%; /*どうすれば画面を縦に3分割できるか*/
+  background-color: lightgray;
+  padding: 30px 4% 10px;
+}
+
+.GmaeDiscription {
+  width: 100%;
+  background-color: white;
+  padding: 30px 4% 10px;
 }
