--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ nav {
 
 .GamePreview {
   width: 100%;
-  height: 60vh; /*どうすれば画面を縦に3分割できるか*/
+  height: 60vh;
   background-color: lightgray;
-  padding: 30px 4% 10px;
+  /* padding: 30px 4% 10px; */
 }
 
 .GmaeDiscription {
